Added policygating required fields

--- a/configs/applications.yaml
+++ b/configs/applications.yaml
@@ -10,6 +10,8 @@ applications:
     projectTier: 2  # Optional field
     projectPhase: "DEVELOPMENT"  # Required field
     projectVersion: "v2025.3"  # Optional field
+    policyGating: false  # Required field
+    policyGatingRisk: ""  # Required field 
     scanOnDeploy: true # Optional field
     scanSchedule: "0 2 * * 0" # Weekly Sunday 2AM (Phase 2) # Optional field
     description: "OWASP WebGoat Official (webgoat/webgoat:latest) - deliberately vulnerable web application" # Optional field
@@ -24,6 +26,9 @@ applications:
 #   projecctVersion: Explicit version override - takes precedence over auto-detection from image tags
 #                    If not specified, version will be auto-detected from container image tags
 #                    Examples: "v2025.3", "1.2.3-release", "2025.09.12-snapshot"
+#  policyGating: either true or false that you want to "break or gate" the build 
+#  policyGatingRisk: either "" for nothing, or blocker, critical, high, medium, low, trivial, unspecified,
+#                    all, or none 
 #
 # Valid Black Duck Project Version Phases:
 # - PLANNING: Early development, requirements gathering
