--- a/templates/deployment-controller.yaml
+++ b/templates/deployment-controller.yaml
@@ -33,11 +33,29 @@ spec:
         runAsUser: 65534  # nobody user
         runAsGroup: 65534
         fsGroup: 65534
+      initContainers:
+        - name: install-deps
+          image: {{ .Values.automated.controller.image }}
+          imagePullPolicy: {{ .Values.automated.controller.imagePullPolicy | default "IfNotPresent" }}
+          command: ["/bin/sh", "-c"]
+          args:
+            - |
+              echo "Installing Python dependencies..."
+              pip3 install --no-cache-dir kubernetes==28.1.0 PyYAML==6.0.1 prometheus-client==0.19.0
+              echo "Dependencies installed successfully"
+          volumeMounts:
+            - name: python-deps
+              mountPath: /usr/local/lib/python3.11/site-packages
+          securityContext:
+            runAsUser: 0
+            runAsGroup: 0
+            allowPrivilegeEscalation: true
+            readOnlyRootFilesystem: false
       containers:
         - name: controller
           image: {{ .Values.automated.controller.image }}
           imagePullPolicy: {{ .Values.automated.controller.imagePullPolicy | default "IfNotPresent" }}
-          command: ["python", "/app/controller.py"]
+          command: ["python3", "/app/controller.py"]
           ports:
             - name: metrics
               containerPort: 8080
@@ -95,6 +113,8 @@ spec:
               readOnly: true
             - name: tmp
               mountPath: /tmp
+            - name: python-deps
+              mountPath: /usr/local/lib/python3.11/site-packages
           
           resources:
             {{- toYaml .Values.automated.controller.resources | nindent 12 }}
@@ -148,22 +168,27 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       
-      volumes:
-        # Controller Python script
-        - name: controller-script
-          configMap:
-            name: {{ include "bd-selfscan.name" . }}-controller
-            defaultMode: 0555
-        
-        # Application configuration
-        - name: applications-config
-          configMap:
-            name: bd-selfscan-applications
-        
-        # Temporary directory (writable)
-        - name: tmp
-          emptyDir:
-            sizeLimit: 100Mi
+    volumes:
+      # Controller Python script
+      - name: controller-script
+        configMap:
+          name: {{ include "bd-selfscan.name" . }}-controller
+          defaultMode: 0555
+      
+      # Application configuration
+      - name: applications-config
+        configMap:
+          name: bd-selfscan-applications
+      
+      # Temporary directory (writable)
+      - name: tmp
+        emptyDir:
+          sizeLimit: 100Mi
+      
+      # Python dependencies (shared between init and main container)
+      - name: python-deps
+        emptyDir:
+          sizeLimit: 500Mi
 
 ---
 # ConfigMap containing the controller Python script
